# CDS

./: README.md  main.py  pyproject.toml
W1/: ex_1_1_Q.py  ex_1_2_Q.py  ex_1_4_1_OLS_Q.py  ex_1_4_1_Q.py  ex_1_4_2_OLS_Q.py  ex_1_4_2_Q.py
W1/Solutions/: ex1_1_sol.py
W2/: Ex_2_1_Q.py
W3/: w3_ex1.ipynb  w3_ex2.ipynb  w3_ex3.ipynb
W3/solutions/: w3_ex1_solution.ipynb  w3_ex3_solution.ipynb
